2008-10-27  Michael Tross  <michael@tross.org>

Reviewed by Alp Toker. Landed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=21827
        [GTK] Fix memory leak in webkit_web_view_load_string

        * webkit/webkitwebview.cpp:

Canonical link: https://commits.webkit.org/30125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37903 268f45cc-cd09-0410-ab3c-d52691b4dbfc